# rust-template

./: Cargo.toml  cargo-generate.toml
