[package]
name = "{{project-name}}"
description = "{{project-name}}."
version = "0.0.0"
authors = ["{{authors}}"]
repository = "https://github.com/andrewhickman/{{project-name}}"
documentation = "https://docs.rs/{{project-name}}"
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]

[dev-dependencies]